--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
                 <h5>HAPPY CUSTOMER</h5>
                 <h2>Testimonials</h2>
             </div>
+        </section>
 
-
+        <section>
+            <div>
+                <img src="./images/massage-head-man-1.jpg" alt="">
+            </div>
         </section>
     </div>
 
